# Characterisation-of-Photon-BEC-phase-diagram-using-Machine-Learning

./: .gitignore  .pre-commit-config.yaml  Binary Phase Classification.py  CMB_with_advanced_sampling_techniques.ipynb  Length Phase Classification.py  Main.ipynb  Makefile  README.md  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: ci.yml
examples/: run_binary_example.py  run_length_example.py  train_binary_with_tf.py
scripts/: setup.sh
src/photon_bec/: __init__.py  binary.py  length.py
tests/: test_binary.py  test_length.py  test_train_with_tf.py
