[tool.poetry]
name = "photon-bec-ml"
version = "0.1.0"
description = "Photon BEC phase diagram characterisation using ML (bsc project)"
authors = ["Oscar Hickman <oscar.hickman17@alumni.imperial.ac.uk>"]

[tool.ruff]
line-length = 88
known-first-party = ["photon_bec"]

[tool.ruff.lint]
select = ["E", "W", "F", "C", "I", "B"]

